typescript/checker/tests/conformance/es6/Symbols/symbolProperty3.ts.stderr
error: TS2464 {
    span: Span {
        lo: BytePos(
            48,
        ),
        hi: BytePos(
            51,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty3.ts:4:5
  |
4 |     [s]: 0,
  |     ^^^

error: TS2464 {
    span: Span {
        lo: BytePos(
            61,
        ),
        hi: BytePos(
            64,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty3.ts:5:5
  |
5 |     [s]() { },
  |     ^^^

error: TS2464 {
    span: Span {
        lo: BytePos(
            81,
        ),
        hi: BytePos(
            84,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty3.ts:6:9
  |
6 |     get [s]() {
  |         ^^^

